--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ wp-content/uploads/wp-migrate-db/*
 #host specific
 .ftpquota
 .well-known
+.htaccess
 
 # cache
 wp-content/object-cache.php
@@ -77,6 +78,8 @@ wp-content/mysql.sql
 /wp-admin
 /wp-includes
 /wp-content/index.php
+/wp-content/db.php
+/wp-content/upgrade
 /wp-content/themes/twentyten
 /wp-content/themes/twentyeleven
 /wp-content/themes/twentytwelve
@@ -97,18 +100,11 @@ wp-content/mysql.sql
 /wp-content/plugins/akismet/
 
 
-/wp-content/themes/soss-catalog-theme/node_modules/
-/wp-content/themes/soss-catalog-theme/.babelrc/
-/wp-content/themes/soss-catalog-theme/.bowerrc/
+**/node_modules
+/wp-content/themes/soss-catalog-theme/bitbucket-pipelines.yml
 /wp-content/themes/soss-catalog-theme/dist/
+/wp-content/themes/soss-catalog-theme/yarn.lock
 
-
-
-
-dist
-node_modules
-npm-debug.log
-vendor
 
 # large/disallowed file types
 # a CDN should be used for these
