--- a/wp-content/themes/soss-catalog-theme/.npmrc
+++ b/wp-content/themes/soss-catalog-theme/.npmrc
@@ -1,3 +1,3 @@
 always-auth=true
-registry=https://npm.greensock.com
 //npm.greensock.com/:_authToken=956295e0-5333-42e7-a22f-01772c9de78f
+@gsap:registry=https://npm.greensock.com
