--- a/wp-content/themes/soss-catalog-theme/package.json
+++ b/wp-content/themes/soss-catalog-theme/package.json
@@ -54,7 +54,7 @@
     "browser-sync": "^2.26.3",
     "font-awesome": "^4.7.0",
     "glyphicons": "^0.2.0",
-    "gsap": "^3.5.1",
+    "gsap": "npm:@gsap/shockingly",
     "jquery": "^3.5.0",
     "micromodal": "^0.3.2",
     "popper.js": "^1.15.0",
