--- a/wp-content/themes/soss-catalog-theme/package.json
+++ b/wp-content/themes/soss-catalog-theme/package.json
@@ -1,64 +1,58 @@
 {
-  "name": "soss-catalog-theme",
-  "version": "1.0.1",
-  "main": "index.php",
-  "repository": "https://github.com/shrinkray/soss-catalog-theme.git",
-  "author": "Greg <hello@gregmiller.io>",
-  "license": "MIT",
-  "scripts": {
-    "dev": "webpack --mode development --watch",
-    "build": "webpack --mode production"
+  "name": "ultralatch-ecommerce-theme",
+  "version": "1.0.0",
+  "description": "Starter theme, built with [Sage](https://roots.io/sage/) 8.5.1 by the development team at [Ainsley & Co.](https://ainsleyagency.com)",
+  "main": "./assets/scripts/main.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shrinkray/ultralatch-ecommerce.git"
   },
-  "devDependencies": {
-    "@babel/preset-env": "^7.3.4",
-    "autoprefixer": "^9.5.0",
-    "axios": "^0.18.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "8",
-    "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^1.0.1",
-    "copy-webpack-plugin": "^5.0.0",
-    "css-loader": "^2.1.0",
-    "file-loader": "^3.0.1",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "generate-json-webpack-plugin": "^0.3.1",
-    "html-webpack-plugin": "^3.2.0",
-    "imagemin-gifsicle": "^6.0.1",
-    "imagemin-jpegtran": "^6.0.0",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-optipng": "^6.0.0",
-    "imagemin-pngquant": "^7.0.0",
-    "imagemin-svgo": "^7.0.0",
-    "imagemin-webpack": "^4.1.0",
-    "imagemin-webpack-plugin": "^2.4.2",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss": "^7.0.14",
-    "postcss-loader": "^3.0.0",
-    "precss": "^4.0.0",
-    "sass-loader": "^7.1.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.0",
-    "webpack-node-externals": "^1.7.2"
+  "directories": {
+    "lib": "lib"
   },
   "dependencies": {
-    "@babel/core": "^7.3.3",
+    "@babel/polyfill": "^7.12.1",
     "@types/gsap": "^1.20.2",
-    "bootstrap": "^4.3.1",
-    "browser-sync": "^2.26.3",
+    "bootstrap": "^4.6.0",
+    "core-js": "^3.10.1",
     "font-awesome": "^4.7.0",
     "glyphicons": "^0.2.0",
-    "gsap": "npm:@gsap/shockingly",
-    "jquery": "^3.5.0",
-    "micromodal": "^0.3.2",
-    "popper.js": "^1.15.0",
-    "tether": "^1.4.5",
-    "typeface-montserrat": "^0.0.54"
-  }
+    "gsap": "file:gsap-bonus.tgz",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
+    "slick-carousel": "^1.8.1",
+    "tether": "^1.4.7",
+    "typeface-montserrat": "^1.1.13"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.26.13",
+    "browser-sync-webpack-plugin": "^2.3.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.3",
+    "cssnano": "^4.1.10",
+    "cssnano-preset-advanced": "^4.0.7",
+    "cssnano-preset-default": "^4.0.7",
+    "laravel-mix": "^6.0.10",
+    "laravel-mix-postcss-config": "^1.4.0",
+    "postcss": "^8.2.4",
+    "postcss-cli": "^8.3.1",
+    "postcss-custom-properties": "^11.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-sorting": "^6.0.0",
+    "postcss-url": "^10.1.1",
+    "purify-css": "^1.2.5",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.32.5",
+    "sass-loader": "^8.0.2"
+  },
+  "scripts": {
+    "dev": "npm run development",
+    "development": "npx mix",
+    "watch": "npx mix watch",
+    "prod": "npm run production",
+    "production": "npx mix -p"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
