--- a/wp-content/themes/soss-catalog-theme/package.json
+++ b/wp-content/themes/soss-catalog-theme/package.json
@@ -1,58 +1,61 @@
 {
-  "name": "ultralatch-ecommerce-theme",
-  "version": "1.0.0",
-  "description": "Starter theme, built with [Sage](https://roots.io/sage/) 8.5.1 by the development team at [Ainsley & Co.](https://ainsleyagency.com)",
-  "main": "./assets/scripts/main.js",
+  "name": "soss-catalog-theme",
+  "version": "1.0.1",
+  "main": "index.php",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shrinkray/ultralatch-ecommerce.git"
+    "url": "git+https://github.com/shrinkray/soss-catalog-theme.git"
   },
+  "keywords": [],
+  "author": "Greg <hello@gregmiller.io>",
+  "license": "ISC",
   "directories": {
-    "lib": "lib"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.12.1",
-    "@types/gsap": "^1.20.2",
-    "bootstrap": "^4.6.0",
-    "core-js": "^3.10.1",
-    "font-awesome": "^4.7.0",
-    "glyphicons": "^0.2.0",
-    "gsap": "file:gsap-bonus.tgz",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "slick-carousel": "^1.8.1",
-    "tether": "^1.4.7",
-    "typeface-montserrat": "^1.1.13"
+    "lib": "lib",
+    "woocommerce": "woocommerce",
+    "templates": "templates"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.13",
+    "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "^2.3.0",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "*",
+    "copy-webpack-plugin": "^6.4.1",
     "cross-env": "^7.0.3",
-    "cssnano": "^4.1.10",
-    "cssnano-preset-advanced": "^4.0.7",
-    "cssnano-preset-default": "^4.0.7",
-    "laravel-mix": "^6.0.10",
+    "cssnano": "^4.1.11",
+    "cssnano-preset-advanced": "^5.0.0",
+    "cssnano-preset-default": "^4.0.8",
+    "laravel-mix": "^5.0.9",
+    "laravel-mix-make-file-hash": "^2.2.0",
     "laravel-mix-postcss-config": "^1.4.0",
-    "postcss": "^8.2.4",
+    "postcss": "^8.2.13",
     "postcss-cli": "^8.3.1",
     "postcss-custom-properties": "^11.0.0",
     "postcss-preset-env": "^6.7.0",
     "postcss-sorting": "^6.0.0",
-    "postcss-url": "^10.1.1",
+    "postcss-url": "^10.1.3",
     "purify-css": "^1.2.5",
     "resolve-url-loader": "^3.1.2",
-    "sass": "^1.32.5",
-    "sass-loader": "^8.0.2"
+    "sass": "^1.32.11",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.12"
   },
   "scripts": {
     "dev": "npm run development",
-    "development": "npx mix",
-    "watch": "npx mix watch",
-    "prod": "npm run production",
-    "production": "npx mix -p"
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "@types/gsap": "^1.20.2",
+    "bootstrap": "^4.6.0",
+    "core-js": "^3.11.0",
+    "font-awesome": "^4.7.0",
+    "glyphicons": "^0.2.0",
+    "gsap": "file:./assets/scripts/gsap-bonus.tgz",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "tether": "^2.0.0",
+    "typeface-montserrat": "^1.1.13"
+  }
 }
