--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,8 @@ wp-content/themes/soss-catalog-theme/node_modules/*
 wp-content/themes/soss-catalog-theme/dist/*
 !wp-content/themes/soss-catalog-theme/assets/*
 wp-content/themes/soss-catalog-theme/assets/.DS_Store
-wp-content/themes/soss-catalog-theme/assets/scripts/gsap-bonus.tgz
+**/gsap-bonus.tgz
+**/.npmrc
 
 
 **/node_modules
