--- a/wp-content/themes/soss-catalog-theme/package.json
+++ b/wp-content/themes/soss-catalog-theme/package.json
@@ -1,60 +1,54 @@
 {
-  "name": "soss-catalog-theme",
-  "version": "1.0.1",
-  "main": "index.php",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/shrinkray/soss-catalog-theme.git"
-  },
-  "keywords": [],
   "author": "Greg <hello@gregmiller.io>",
-  "license": "ISC",
+  "devDependencies": {
+    "browser-sync": "^2.26.14",
+    "browser-sync-webpack-plugin": "^2.3.0",
+    "clean-webpack-plugin": "*",
+    "copy-webpack-plugin": "^8.1.1",
+    "cross-env": "^7.0.3",
+    "laravel-mix": "^6.0.18",
+    "postcss": "^8.2.13",
+    "postcss-cli": "^8.3.1",
+    "postcss-custom-properties": "^8.0.11",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-sorting": "^6.0.0",
+    "postcss-url": "^10.1.3",
+    "purify-css": "^1.2.5",
+    "sass": "^1.32.11",
+    "sass-loader": "^11.0.1"
+  },
   "directories": {
     "lib": "lib",
     "woocommerce": "woocommerce",
     "templates": "templates"
   },
-  "devDependencies": {
-    "browser-sync": "^2.26.14",
-    "browser-sync-webpack-plugin": "^2.3.0",
-    "clean-webpack-plugin": "*",
-    "copy-webpack-plugin": "^6.4.1",
-    "cross-env": "^7.0.3",
-    "cssnano": "^4.1.11",
-    "cssnano-preset-advanced": "^5.0.0",
-    "cssnano-preset-default": "^4.0.8",
-    "laravel-mix": "^5.0.9",
-    "laravel-mix-make-file-hash": "^2.2.0",
-    "laravel-mix-postcss-config": "^1.4.0",
-    "postcss": "^8.2.13",
-    "postcss-cli": "^8.3.1",
-    "postcss-custom-properties": "^11.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-sorting": "^6.0.0",
-    "postcss-url": "^10.1.3",
-    "purify-css": "^1.2.5",
-    "resolve-url-loader": "^3.1.2",
-    "sass": "^1.32.11",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.12"
+  "keywords": [],
+  "license": "ISC",
+  "main": "index.php",
+  "name": "soss-catalog-theme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shrinkray/soss-catalog-theme.git"
   },
   "scripts": {
-    "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "npm run development -- --watch",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "dev": "mix",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "production": "mix --production"
   },
+  "version": "1.0.1",
   "dependencies": {
-    "@types/gsap": "^1.20.2",
     "bootstrap": "^4.6.0",
     "core-js": "^3.11.0",
     "font-awesome": "^4.7.0",
     "glyphicons": "^0.2.0",
-    "gsap": "file:./assets/scripts/gsap-bonus.tgz",
+    "gsap": "npm:@gsap/shockingly@^3.6.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "save": "^2.4.0",
+    "terser": "^5.7.0",
     "tether": "^2.0.0",
     "typeface-montserrat": "^1.1.13"
   }
