--- a/wp-content/themes/soss-catalog-theme/package.json
+++ b/wp-content/themes/soss-catalog-theme/package.json
@@ -6,6 +6,7 @@
     "clean-webpack-plugin": "*",
     "copy-webpack-plugin": "^8.1.1",
     "cross-env": "^7.0.3",
+    "cssnano": "^4.1.11",
     "laravel-mix": "^6.0.18",
     "postcss": "^8.2.13",
     "postcss-cli": "^8.3.1",
