--- a/wp-content/themes/soss-catalog-theme/package.json
+++ b/wp-content/themes/soss-catalog-theme/package.json
@@ -14,6 +14,7 @@
     "postcss-preset-env": "^6.7.0",
     "postcss-sorting": "^6.0.0",
     "postcss-url": "^10.1.3",
+    "prettier": "^2.3.1",
     "purify-css": "^1.2.5",
     "sass": "^1.32.11",
     "sass-loader": "^11.0.1"
