--- a/wp-content/themes/soss-catalog-theme/package.json
+++ b/wp-content/themes/soss-catalog-theme/package.json
@@ -42,6 +42,7 @@
   },
   "version": "2.0.0",
   "dependencies": {
+    "@accessible360/accessible-slick": "^1.0.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.11.0",
     "font-awesome": "^4.7.0",
